<resources>
    <string name="app_name">BookLib</string>

    <!-- Error message -->
    <string name="error_data_loading">Data loading error</string>
    <string name="error_list_loading">Error loading list</string>

    <!-- imformation result book by date -->
    <string name="info_books_by_date_date_public">Date of publication</string>
    <string name="info_books_by_date_bestsellers_date">Bestsellers date</string>
    <string name="info_books_by_date_display_name">Literature category:</string>
    <string name="info_books_by_date_next_published_date">Next published date</string>

    <!-- Item book, books by date -->
    <string name="fragment_item_book_image_description">Image book</string>
    <string name="fragment_item_book_title">Title</string>
    <string name="fragment_item_book_author">Author</string>
    <string name="fragment_item_book_rank">Rank</string>
    <string name="fragment_item_book_rank_last_week">Rank last week</string>
    <string name="fragment_item_book_weeks_on_list">Weeks on list</string>
    <string name="fragment_book_full_info_link_review">Link to review</string>
    <string name="error_get_data_for_book">Unable to get book data</string>
    <string name="book_uri">book uri</string>
    <string name="first_chapter_link">first chapter link</string>
    <string name="error_link_source">No link to source </string>

    <string name="error_api">Здесь должна открываться ссылка, но api возвращает пока непонятную ссылку, мы работаем над устранением проблемы</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_search_line">Enter date</string>
    <string name="search_button_text">Search</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="categories">Categories</string>
    <string name="personal">Personal</string>

</resources>